--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,52 @@
   height: 120px;
   padding: 0 40px;
 }
+@media screen and (max-width:599px) {
+  .header {
+    height: 64px;
+    padding: 0 0 0 16px;
+  }
+}
 .header .nav {
   display: flex;
   -moz-column-gap: 32px;
        column-gap: 32px;
+}
+@media screen and (max-width:599px) {
+  .header .nav {
+    display: none;
+  }
+}
+.header .ham {
+  display: none;
+}
+@media screen and (max-width:599px) {
+  .header .ham {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 64px;
+    height: 64px;
+    padding: 16px;
+    background-color: #06344F;
+  }
+}
+.header .ham-icon {
+  display: flex;
+  flex-flow: column;
+  row-gap: 8px;
+  margin-bottom: 3px;
+}
+.header .ham__boder {
+  width: 100%;
+  height: 1px;
+  border-radius: 16px;
+  background-color: #fff;
+}
+.header .ham__menu {
+  color: #FFEB86;
+  font-size: 10px;
 }
 
 body {
@@ -20,6 +62,11 @@ body {
 
 h2 {
   font-size: 56px;
+}
+@media screen and (max-width:599px) {
+  h2 {
+    font-size: 24px;
+  }
 }
 
 h3 {
@@ -36,6 +83,11 @@ li {
 
 .section {
   padding: 200px 0;
+}
+@media screen and (max-width:599px) {
+  .section {
+    padding: 96px 24px;
+  }
 }
 
 .contents-container {
@@ -75,6 +127,12 @@ li {
   align-items: center;
   -moz-column-gap: 32px;
        column-gap: 32px;
+}
+@media screen and (max-width:599px) {
+  .nav-menu {
+    flex-flow: column;
+    row-gap: 32px;
+  }
 }
 
 .fa-instagram {
@@ -147,9 +205,22 @@ li {
   margin-bottom: 16px;
   font-weight: bold;
 }
+@media screen and (max-width:599px) {
+  .hero-text h1 {
+    font-size: 40px;
+    margin-bottom: 16px;
+    font-weight: bold;
+  }
+}
 .hero-text p {
   font-size: 24px;
   font-weight: bold;
+}
+@media screen and (max-width:599px) {
+  .hero-text p {
+    font-size: 24px;
+    font-weight: bold;
+  }
 }
 
 .concept {
