--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,3 +1,4 @@
+@use 'mixin' as *;
 @use 'variables' as *;
 
 body{
@@ -7,6 +8,9 @@ body{
 
 h2{
     font-size: 56px;
+    @include mq(sp){
+        font-size: 24px;
+    }
 }
 
 h3{
@@ -23,6 +27,9 @@ li{
 
 .section{
     padding: 200px 0;
+    @include mq(sp){
+        padding: 96px 24px;
+    }
 }
 
 .contents-container{
