--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,7 @@
+@use 'mixin' as *;
+@use 'variables' as *;
+
+
 .header{
     display: flex;
     align-items: center;
@@ -6,9 +10,49 @@
     width: 100%;
     height: 120px;
     padding: 0 40px;
+    @include mq(sp){
+        height: 64px;
+        padding: 0 0 0 16px;
+    }
+
     .nav{
         display: flex;
         column-gap: 32px;
+        @include mq(sp){
+            display: none;
+        }
+    }
+
+    .ham{
+        display: none;
+        @include mq(sp){
+            display: block;
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 64px;
+            height: 64px;
+            padding: 16px;
+            background-color: $mainColor1;
+        }
+
+        &-icon{
+            display: flex;
+            flex-flow: column;
+            row-gap: 8px;
+            margin-bottom: 3px;
+        }
+
+        &__boder{
+            width: 100%;
+            height: 1px;
+            border-radius: 16px;
+            background-color: #fff;
+        }
+
+        &__menu{
+            color: $textColor1;
+            font-size: 10px;
+        }
     }
 }
-
