--- a/scss/_modules.scss
+++ b/scss/_modules.scss
@@ -1,3 +1,4 @@
+@use 'mixin' as *;
 @use 'variables' as*;
 
 .section-head{
@@ -22,6 +23,10 @@
         display: flex;
         align-items: center;
         column-gap: 32px;
+        @include mq(sp){
+            flex-flow: column;
+            row-gap: 32px;
+        }
     }
 }
 
